debug: 수의사 삭제시 수의사 테이블과 연관관계에 있는 테이블 반영 안되는 버그 수정 (#135) (#136)
* debug: 수의사 삭제시 수의사 테이블과 연관관계에 있는 테이블 반영 안되는 버그 수정 (#135)

* refactor: 공통 코드 정리 (#135)

* refactor: 불필요한 Import문 삭제 (#135)

* refactor: 테스트 코드 수정 (#135)

* refactor: 불필요한 코드 삭제 (#135)